=== 0.4.2 :: In progress...

* Minor improvements to error messages having to do with login tickets.
  They're a bit more prescriptive now, explaining to the user what steps
  they should take to correct the error.

=== 0.4.1 :: 2007-06-07

* This release restores compatiblity with older versions of rubygems
  (pre-0.9.0). To achieve this, we alias the 'gem' method to the old 
  'require_gem' if 'gem' is not already defined.
* rubycas-server-ctl will now quiety delete an orphaned .pid file 
  instead complaining loudly and refusing to start up.
* Fixed minor bug in rubycas-server-ctl that sometimes incorrectly reported
  startup problems when in fact the server had started just fine.


=== 0.4.0 :: 2007-06-05

* Added rubycas-server-ctl script for controlling daemonized server.
* rubygems-0.9.0 or later is now required.
* Added system startup script to be used in /etc/init.d on Linux systems.
* Authenticator can now be loaded from an external file using the 'source'
  configuration option.
* Better preemptive detection of startup problems with mongrel.
* User now sees an error message if the service URI is not a valid URI (i.e.
  if it's not URI-encoded or otherwise malformed).


=== 0.3.0 :: 2007-03-29

* Fixed glaring security problem with LDAP/AD Authenticator where under some
  circumstances blank passwords were accepted as valid.
* Autocomplete has been turned off on the password field for better security.
  In the future we may allow autocomplete to be re-enabled using a
  configuration setting.
* When the user visits the login page and is already authenticated (i.e. they
  have a valid ticket granting cookie), a message is shown at the top 
  indicating that they are already logged in.
* sqlite3-ruby is no longer required by the gem as a dependency.  The user 
  must now install it manually prior to installing rubycas-server. The
  building of sqlite3 native extensions appears to be somewhat flakey